Fix spacing

--- a/static/styles.css
+++ b/static/styles.css
@@ -172,7 +172,7 @@ summary::-moz-list-bullet {
 
 .side-navigation {
     position: fixed;
-    width: 200px; 
+    width: 208px; 
     top: 0;
     left: 0;
     height: 100%;
